@@ -16,6 +16,7 @@ import org.xmlBlaster.engine.mime.I_AccessFilter;
 import org.xmlBlaster.engine.mime.Query;
 import org.xmlBlaster.util.Global;
 import org.xmlBlaster.util.MsgUnit;
+import org.xmlBlaster.util.SessionName;
 import org.xmlBlaster.util.StringPairTokenizer;
 import org.xmlBlaster.util.XmlBlasterException;
 import org.xmlBlaster.util.def.Constants;
@@ -82,6 +83,7 @@ public class DropIfNotDeliverable implements I_Plugin, I_AccessFilter, I_Connect
     * @param glob The Global handle of this xmlBlaster server instance.
     */
    public void initialize(ServerScope serverScope) {
+	   log.info("init serverScope");
    }
    
    /**
@@ -153,16 +155,7 @@ public class DropIfNotDeliverable implements I_Plugin, I_AccessFilter, I_Connect
       dm.addConnectionStatusListener(this); // register for toAlive() and toPolling() events (multiple calls don't harm)
       try {
          if (dm.isPolling() || dm.isShutdown()) {
-            String[] subIds = receiver.getSubscriptions();
-            if (log.isLoggable(Level.FINE))
-               log.fine(dm.getSessionName().getAbsoluteName() + " is not reachable, cleaning "
-                     + subIds.length + " subscriptions and "
-                     + dm.getQueue().getNumOfEntries() + " callbackQueue entries");
-            for (int i=0; i<subIds.length; i++) {
-               receiver.unSubscribe(Constants.SUBSCRIPTIONID_URL_PREFIX+subIds[i], null);
-            }
-            //Can cause deadlock between CacheQueueInterceptor.clear sync and TopicHandler sync (see from toPolling or toAlive below) 
-            //dm.getQueue().clear();
+        	DropIfNotDeliverableUniqueOnly.toPolling(getType(), getVersion(), (ServerScope)glob, dm.getSessionName());
             return false;
          }
          return true;
@@ -195,33 +188,7 @@ public class DropIfNotDeliverable implements I_Plugin, I_AccessFilter, I_Connect
 
    // @see org.xmlBlaster.util.dispatch.I_ConnectionStatusListener#toPolling(org.xmlBlaster.util.dispatch.DispatchManager, org.xmlBlaster.util.dispatch.ConnectionStateEnum)
    public void toPolling(I_DispatchManager dispatchManager, ConnectionStateEnum oldState) {
-      try {
-          I_AdminSession receiver = ((ServerScope)glob).getAuthenticate().getSubjectInfoByName(dispatchManager.getSessionName()).getSessionByPubSessionId(dispatchManager.getSessionName().getPublicSessionId());
-          String[] subIds = receiver.getRootSubscriptions(); // receiver.getSubscriptions();
-          if (log.isLoggable(Level.FINE))
-             log.fine(receiver.getLoginName() + "/" + receiver.getPublicSessionId() + " toPolling, removing " + subIds.length + " subscriptions");
-          for (int i=0; i<subIds.length; i++) {
-         	 String subId = subIds[i];
-         	// __subId:marcelruff-XPATH1306100581978000000 (and its childs like __subId:marcelruff-XPATH1306100866146000000:1306100866148000000')
-             // __subId:marcelruff-1306100582129000000
-         	 if (subId.startsWith("__subId")) {
-                  receiver.unSubscribe(subId, null);
-         	 }
-         	 else {
-         		// SUBSCRIPTIONID_URL_PREFIX=subscriptionId is optional, it is stripped internally
-                 receiver.unSubscribe(Constants.SUBSCRIPTIONID_URL_PREFIX+subId, null);
-         	 }
-          }
-//
-//          I_AdminSession receiver = ((ServerScope)glob).getAuthenticate().getSubjectInfoByName(dispatchManager.getSessionName()).getSessionByPubSessionId(dispatchManager.getSessionName().getPublicSessionId());
-//         String[] subIds = receiver.getSubscriptions();
-//         if (log.isLoggable(Level.FINE))
-//            log.fine(receiver.getLoginName() + "/" + receiver.getPublicSessionId() + " toPolling, removing " + subIds.length + " subscriptions");
-//         for (int i=0; i<subIds.length; i++) {
-//            receiver.unSubscribe(Constants.SUBSCRIPTIONID_URL_PREFIX+subIds[i], null);
-//         }
-      } catch (Throwable e) {
-         e.printStackTrace();
-      }
+  	 SessionName sn = dispatchManager.getSessionName();
+  	 DropIfNotDeliverableUniqueOnly.toPolling(getType(), getVersion(), (ServerScope)glob, sn);
    }
 }
