@@ -4,7 +4,12 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
- o 18336 2019-03-15 adrian marcel
+ o 18338 2019-03-15 adrian marcel
+   Incompatible change of DropIfNotDeliverable DropIfNotDeliverableUniqueOnly
+   Only unsubscribe subscriptions which have declared the above plugins in AccessFilterQos
+   Before: All subcriptions were unsubscribed
+
+ o 18336,18337 2019-03-15 adrian marcel
    Added convenience methods for AccessFilter and SubscribeQos access
 
  o 18333-18335 2019-03-09 marcel
